# gbfs_rs

./: .gitignore  Cargo.toml  LICENSE  README.md  shell.nix
fuzz/: Cargo.toml
fuzz/fuzz_targets/: gbfs.rs
nix/: rust.nix  sources.json
src/: constfs.rs  error.rs  file.rs  header.rs  lib.rs
test_assets/: assets.gbfs
tests/: integration_tests.rs
