[package]
name = "gbfs"
version = "0.2.2"
authors = ["casept <davids.paskevics@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = {version = "0.7.1", default_features = false}
byte-slice-cast = {version = "1", default_features = false}
