[package]
name = "gbfs"
version = "0.2.2"
authors = ["casept <davids.paskevics@gmail.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/industry-advance/gbfs_rs"
repository = "https://github.com/industry-advance/gbfs_rs"
description = "A crate for reading gameboy filesystem archives, a format commonly used in GBA homebrew games."

[dependencies]
arrayvec = {version = "0.7.2", default_features = false}
byte-slice-cast = {version = "1", default_features = false}
